--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -13,6 +13,12 @@
             </a>
         </li>
         <li>
+            <a routerLink="/projects">
+                <i class="glyphicon glyphicon-user"></i>
+                Projects
+            </a>
+        </li>
+        <li>
             <a routerLink="/user/listing">
                 <i class="glyphicon glyphicon-user"></i>
                 Users
