--- a/src/styles.css
+++ b/src/styles.css
@@ -269,3 +269,22 @@ a.article, a.article:hover {
 .loadingListing {
     margin-right: 5px;
 }
+
+.ngx-datepicker-calendar-container {
+    z-index: 1;
+}
+.ngx-datepicker-input {
+    display: block !important;
+    width: 100% !important;
+    height: 34px !important;
+    padding: 6px 12px !important;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px !important;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075) !important;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s !important;
+}
